--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,22 +1,3 @@
-@define-color base            #191724;
-@define-color surface         #1f1d2e;
-@define-color overlay         #26233a;
-
-@define-color muted           #6e6a86;
-@define-color subtle          #908caa;
-@define-color text            #e0def4;
-
-@define-color love            #eb6f92;
-@define-color gold            #f6c177;
-@define-color rose            #ebbcba;
-@define-color pine            #31748f;
-@define-color foam            #9ccfd8;
-@define-color iris            #c4a7e7;
-
-@define-color highlightLow    #21202e;
-@define-color highlightMed    #403d52;
-@define-color highlightHigh   #524f67;
-
 * {
   border: none;
   border-radius: 0;
@@ -28,20 +9,21 @@
 }
 
 window#waybar {
-  background: @base;
-  color: @text;
+  background: #031720;
+  color: #9bacb4;
 }
 
 #workspaces button {
   padding: 0 10px;
-  color: @text;
+  color: #9bacb4;
 }
 
 #workspaces button.focused {
-  background-color: @overlay;
+  background-color: #052838;
 }
 
 #battery {
   margin-left: 7px;
   margin-right: 3px;
 }
+
